--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
 	<!-- 
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
+	PORTFOLIO WEBSITE
+	DESIGNED & DEVELOPED by tusharmaurya
 		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -60,7 +57,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(https://i.postimg.cc/ZRR83K9X/tushar-jpg.png);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -68,7 +65,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
+							<h1><span>Tushar Maurya</span></h1>
 							<h3><span>Web Developer / Photographer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
@@ -95,11 +92,11 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Tushar Maurya</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+91 8445764941</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">tusharmaurya1007@gmail.com</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">B299 NRI CITY OMEGA 2 GREATER NOIDA</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
