--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 		</div>
 	</div>
 
-	<div id="map" class="fh5co-map"></div>
+	<!--<div id="map" class="fh5co-map"></div> -->
 	</div>
 	
 	<div id="fh5co-footer">
