--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Profile &mdash; Tushar Maurya</title>
-	<link rel="manifest" href="/site.webmanifest">
+	<link rel="icon" type="image/favicon.png" sizes="32x32" href="/favicon-32x32.png">
+
 
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
