--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Profile &mdash; Tushar Maurya</title>
-	<link rel="icon" type="image/favicon.png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 
 
 
