--- a/index.html
+++ b/index.html
@@ -578,44 +578,44 @@
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
-			<h2>Contact</h2>
-			<form action="#">
+			 <h2>Contact</h2>
+			<form action="https://formsubmit.co/d227d000716666a7e9a4cf102a469f7a" method="POST">
 				<div class="row form-group">
 					<div class="col-md-6">
-						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
+						<input type="text" id="fname" name="Name" class="form-control" placeholder="Your firstname">
 					</div>
 				</div>
 				<div class="row form-group">
 					<div class="col-md-6">
-						<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+						<input type="text" id="lname" name="LastName" class="form-control" placeholder="Your lastname">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<input type="text" id="email" class="form-control" placeholder="Your email address">
+						<input type="text" id="email" name="Gmail" class="form-control" placeholder="Your email address">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
+						<input type="text" id="subject" name="Subject" class="form-control" placeholder="Your subject of this message">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+						<textarea name="Message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
 					<input type="submit" value="Send Message" class="btn btn-primary">
+                    <input type="hidden" name="_next" value="https://www.shutterstock.com/image-vector/thank-you-speech-bubble-banner-can-1926895331">
 				</div>
 
 			</form>	
 		</div>
 	</div>
-
 	<!--<div id="map" class="fh5co-map"></div> -->
 	</div>
 	
