--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<li><a href="#"><i class="icon-instagram"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
+									<li><a href="#"><i class="icon-twitter2"></i></a></li>
 								</ul>
 							</p>
 						</div>
