--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<h3><span>Web Developer / Photographer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-instagram"></i></a></li>
+									<li><a href="https://www.instagram.com/iamtusharmaurya/"><i class="icon-instagram"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
