--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.instagram.com/iamtusharmaurya/"><i class="icon-instagram"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/iamtusharmaurya/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
 								</ul>
 							</p>
