--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 								<i class="icon-briefcase"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Branding</h3>
+								<h3>Digital Marketing</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -293,7 +293,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-genius"></i>
+								<i class="icon-camera"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Web Marketing</h3>
