--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 								<i class="icon-camera"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Marketing</h3>
+								<h3>Product Photography</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
