--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Analytics</h3>
+								<h3>Data Analytics</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -308,7 +308,7 @@
 								<i class="icon-chat"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Support</h3>
+								<h3>Technical Support</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -327,26 +327,26 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+					<div class="chart" data-percent="95"><span><strong>HTML5</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+					<div class="chart" data-percent="93"><span><strong>CSS3</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>jQuery</strong>50%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+					<div class="chart" data-percent="89"><span><strong>PHP</strong>60%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>ReactJS</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
+					<div class="chart" data-percent="85"><span><strong>JavaScript</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
@@ -371,7 +371,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+						<h3><span class="name-left">PHP</span><span class="value-right">60%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -379,7 +379,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Java</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -389,29 +389,29 @@
 				</div>
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Design</span><span class="value-right">100%</span></h3>
+						<h3><span class="name-left">Design</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
 						  </div>
 						</div>
 					</div>
-					<div class="progress-wrap">
+					<!--<div class="progress-wrap">
 						<h3><span class="name-left">Ruby</span><span class="value-right">70%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-striped active" role="progressbar"
 						  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
 						  </div>
 						</div>
-					</div>
-					<div class="progress-wrap">
+					</div> -->
+				<!--	<div class="progress-wrap">
 						<h3><span class="name-left">Python</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
 						  </div>
 						</div>
-					</div>
+					</div> -->
 					<div class="progress-wrap">
 						<h3><span class="name-left">jQuery</span><span class="value-right">75%</span></h3>
 						<div class="progress">
