--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 						</div>
 					</div> -->
 					<div class="progress-wrap">
-						<h3><span class="name-left">jQuery</span><span class="value-right">75%</span></h3>
+						<h3><span class="name-left">ReactJS</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
