--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Designers use different tools and software, such as Adobe Photoshop, Illustrator, Sketch, or Figma, to create website mockups and prototypes.</p>
 							</div>
 						</div>
 					</div>
