--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 				</div>
 				<div class="form-group">
 					<input type="submit" value="Send Message" class="btn btn-primary">
-                                        <input type="hidden" name="_next" value="http://192.168.29.122:5500/thankyou.html">
+                                        <input type="hidden" name="_next" value="https://tan-jordain-25.tiiny.site/">
 				</div>
 
 			</form>	
