--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 					<h2>Hire Me!</h2>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
-					<p><a href="#" class="btn btn-default btn-lg">Resume Us</a></p>
+					<p><a href="#" class="fa fa-download">Resume </a></p>
 				</div>
 			</div>
 		</div>
