--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Digital Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Digital Marketing techniques include search engine optimization (SEO), pay-per-click (PPC) advertising, social media marketing, email marketing, content marketing, and mobile marketing.</p>
 							</div>
 						</div>
 
@@ -268,7 +268,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Data Analytics</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Data analytics is widely used in various industries, such as finance, healthcare, marketing, and sports, to help organizations make data-driven decisions. It involves the use of various tools and technologies.</p>
 							</div>
 						</div>
 					</div>
@@ -297,7 +297,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Product Photography</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>This type of photography is commonly used in e-commerce, advertising, and marketing, and is intended to highlight the features and qualities of the product being sold.</p>
 							</div>
 						</div>
 
@@ -309,7 +309,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Technical Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Provide technical support in various field.</p>
 							</div>
 						</div>
 					</div>
