--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">intermeddiate</h3>
+									<h3 class="timeline-title">Intermeddiate</h3>
 									<span class="company">Sherwani Inter Collage- 2019-2020</span>
 								</div>
 								<div class="timeline-body">
