--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									<span class="company">Noida Institute of Engineering and Technology - 2020-2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<!--<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
 							</div>
 						</li>
@@ -230,7 +230,7 @@
 									<span class="company">Sherwani Inter Collage- 2019-2020</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 								</div>
 							</div>
 						</li>
