--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									<span class="company">StartUp - 2021 - 2022</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<!--<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
 							</div>
 						</li>
@@ -160,11 +160,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Photography</h3>
-									<span class="company">Megapixel - 2021 - 2022</span>
+									<h3 class="timeline-title">Photography Club</h3>
+									<span class="company">Megapixels - 2021 - 2022</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Megapixels is a collage photography club .</p>
 								</div>
 							</div>
 						</li>
