--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									<span class="company">StartUp - 2021 - 2022</span>
 								</div>
 								<div class="timeline-body">
-									<!--<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
+									<p>Work on collage startup.</p>
 								</div>
 							</div>
 						</li>
@@ -164,7 +164,7 @@
 									<span class="company">Megapixels - 2021 - 2022</span>
 								</div>
 								<div class="timeline-body">
-									<p>Megapixels is a collage photography club .</p>
+									<p>Megapixels is a collage photography club @niet_megapixels .</p>
 								</div>
 							</div>
 						</li>
