--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<li><a href="https://www.instagram.com/iamtusharmaurya/"><i class="icon-instagram"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/iamtusharmaurya/"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
+									<li><a href="https://github.com/tushar-maurya"><i class="icon-github"></i></a></li>
 								</ul>
 							</p>
 						</div>
