--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-whatsapp"></i></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=+917055594566&text=Hello!"><i class="icon-whatsapp"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/iamtusharmaurya/"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 						</ul>
 					</p>
