--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Under Graduation</h3>
-									<span class="company">Noida Institute of Engineering and Technology - 2020-2024</span>
+									<span class="company">Noida Institute of Engineering and Technology <br> Third Year  - 2020-2024</span>
 								</div>
 								<div class="timeline-body">
 									<!--<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
