--- a/index.html
+++ b/index.html
@@ -104,8 +104,14 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>Welcome to my page! My name is Tushar Maurya and I'm a web developer.</p>
+					<p>I have a Bachelor of Education in Computer Science and have been working in the field for two years. I have always been passionate about technology and love working with code to create innovative solutions for the web.
+
+Over the years, I have honed my skills in coding, and photography, video editing and have worked on a variety of projects ranging from small websites to large-scale applications. I am constantly looking for ways to improve my craft and stay up-to-date with the latest trends and technologies in the industry.
+
+ I believe in the importance of work-life balance and make it a point to pursue my passions outside of work.
+
+I created this page as a way to showcase my work and connect with others in the industry. Whether you're here to learn more about my skills and experience or simply to connect with like-minded individuals, I hope you'll find what you're looking for here..</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://api.whatsapp.com/send?phone=+917055594566&text=Hello!"><i class="icon-whatsapp"></i></a></li>
