--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	//////////////////////////////////////////////////////
 
 	PORTFOLIO WEBSITE
-	DESIGNED & DEVELOPED by tusharmaurya
+	DESIGNED & DEVELOPED BY I AM TUSHARMAURYA
 		
 	
 
@@ -97,8 +97,8 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Tushar Maurya</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+91 8445764941</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">tusharmaurya1007@gmail.com</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+91 7055594566</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">iamtusharmaurya@gmail.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">B299 NRI CITY OMEGA 2 GREATER NOIDA</span></li>
 					</ul>
 				</div>
