--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/tushar(2).jpg);"></div>
+							<div class="profile-thumb" style="background: url(https://i.postimg.cc/wTCgBWzG/compres-img.jpg);"></div>
 							<h1><span>Tushar Maurya</span></h1>
 							<h3><span>Web Developer / Photographer</span></h3>
 							<p>
