--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@ I created this page as a way to showcase my work and connect with others in the 
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://e-comma.netlify.app/" class="work" style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>E-Comma</h3>
+							<span>All product store</span>
 						</div>
 					</a>
 				</div>
