--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ I created this page as a way to showcase my work and connect with others in the 
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://e-comma.netlify.app/" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://e-comma.netlify.app/" class="work" style="background-image: url(images/e-comma.png);">
 						<div class="desc">
 							<h3>E-Comma</h3>
 							<span>All product store</span>
